# ISTA-DASLab-Optimizers

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  install.sh  pyproject.toml  run_example.sh  run_microadam.sh  setup.py
examples/: example.py  run_sparsemfac.sh
examples/cifar10/: example.py  run_dense_mfac.sh
examples/custom_models/: __init__.py
ista_daslab_optimizers/: __init__.py  tools.py
ista_daslab_optimizers/acdc/: __init__.py  acdc.py  wd_scheduler.py
ista_daslab_optimizers/custom_ema_adamw/: __init__.py  custom_ema_adamw.py
ista_daslab_optimizers/dash/: __init__.py  dash_base.py  dash_block_root_invertor.py  dash_config.py  dash_configs.py  dash_gpu.py  dash_layerwise.py  dash_layerwise_block_partitioner.py  dash_layerwise_processor.py  held_out_code.py  test.py
ista_daslab_optimizers/dense_mfac/: __init__.py  dense_core_mfac.py  dense_mfac.py
ista_daslab_optimizers/fft_low_rank/: README.md  clr_projector.py  dct_adamw.py  fft_projector.py  trion.py
ista_daslab_optimizers/ista_optimizer/: __init__.py  ista_optimizer.py
ista_daslab_optimizers/micro_adam/: __init__.py  micro_adam.py
kernels/: utils.h
kernels/tools/: tools.cpp  (+1 more)
setup_micro_adam/: microadam.cpp  microadam_asymm_block_quant.cu  microadam_asymm_block_quant_inv.cu  microadam_asymm_global_quant.cu  microadam_asymm_global_quant_inv.cu  microadam_symm_block_quant.cu  microadam_symm_block_quant_inv.cu  microadam_tools.cu  microadam_update.cu  utils.h
setup_sparse_mfac/: sparsemfac.cpp  sparsemfac_LCG_kernel.cu  sparsemfac_SP_kernel.cu  sparsemfac_tools.cu  utils.h
(+70 files in other folders)
