[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name='ista_daslab_optimizers'
version='1.1.3'
dependencies = [
    "torch", # >=2.3.1",
    "torchaudio", # >=2.3.1",
    "torchvision", #>=0.18.1",
    "numpy", # >=1.24.1",
    "wandb",#>=0.17.1",
    "gpustat",#>=1.1.1",
    "timm", # >=1.0.3",
    "einops", # >=0.7.0",
    "psutil", # >=5.9.8",
]
requires-python = '>= 3.8'
authors = [
    {name = "Ionut-Vlad Modoranu", email = "ionut-vlad.modoranu@ist.ac.at"}
]
maintainers = [
    {name = "Ionut-Vlad Modoranu", email = "ionut-vlad.modoranu@ist.ac.at"},
]
description = 'Deep Learning optimizers developed in the Distributed Algorithms and Systems group (DASLab) @ Institute of Science and Technology Austria (ISTA)'
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "adaptive optimization",
    "deep learning",
    "low memory optimization",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = 'https://github.com/IST-DASLab/ISTA-DASLab-Optimizers'
